# foiddotfun

./: .gitignore  .gitmodules  GIT_GROYPER.md  README.md  commit-groyper.sh  package-lock.json  package.json  render.yaml  tailwind.config.js
conditional_mint_fluent/: foundry.toml
conditional_mint_fluent/conditional_mint_fluent/: .env.example  .gitignore
conditional_mint_fluent/script/: Deploy.s.sol  GrindAndDeployF01D.s.sol
conditional_mint_fluent/scripts/: mint_with_attestation.sh
conditional_mint_fluent/src/: AttestorRegistry.sol  FOID20.sol  FOID20Factory.sol  MyToken.sol  amm.sol  foidswap_factory.sol  foidswap_pair.sol  foidswap_router.sol
conditional_mint_fluent/src/foid-prayer/src/prayer-registry/: .gitignore  Cargo.toml  readme.md
conditional_mint_fluent/src/foid-prayer/src/prayer-registry/src/: lib.rs
conditional_mint_fluent/test/: pair.t.sol  router.t.sol
docs/: dapp.md  metamaskSnap.md
foid_fun/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json  tsconfig.scripts.json  tsconfig.tsbuildinfo
foid_fun/.next-cache/: manifest-epoch-0.json
foid_fun/public/: site.webmanifest
foid_fun/scripts/: Deploy.s.sol  dumpManifest.cjs  dumpManifest.ts  finalizeEpoch.ts  operatorFinalize.ts  prebuild.js  (+1 more)
groyper/: .dockerignore  ADDING_ENDPOINTS.md  DOCKER.md  Dockerfile  Groyper.json  README.md  docker-compose.yml  keys.json  messages.db  package-lock.json  package.json  server.js
monero/: .gitignore  Cargo.toml  README.md  test_api.sh
pitchdeck/: pitchdeck.tex
(+155 files in other folders)
